<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#401E213D"
    tools:context=".viewEvent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoEvent"
                android:layout_width="300dp"
                android:layout_height="133dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/logoInfo"
                android:onClick="returnToResults"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/eventNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:text="@string/eventHeader"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <ImageView
                    android:id="@+id/eventImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/eventInfo"
                    android:onClick="returnToResults"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/eventTimeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/eventTime"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/eventAddFragmentView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#641C34"
                    android:onClick="openAddress"
                    android:padding="10dp"
                    android:text="@string/eventAddress"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <TextView
                    android:id="@+id/priceView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    android:text="@string/priceRange"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <Button
                    android:id="@+id/ticketsView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="#641C34"
                    android:onClick="buyTickets"
                    android:padding="10dp"
                    android:text="@string/ticketLink"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>