<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#401E213D"
    tools:context=".results">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/info"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:contentDescription="@string/infoLog"
            android:onClick="viewInfo"
            app:srcCompat="@drawable/info"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center|center_horizontal"
            android:contentDescription="@string/app_name"
            android:onClick="returnToSearch"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/newSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:backgroundTint="#641C34"
            android:onClick="returnRestart"
            android:text="@string/newSearch"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#401E213D"
        android:scrollbarSize="8dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>